--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         Pyojin Kim<sup>1</sup>,
         Brian Coltin<sup>2,3</sup>,
         Andres Mora Vargas<sup>2,3</sup>,
-        Marina Moreira<sup>2,3</sup>,
+        Marina Moreira<sup>2,3</sup>,<br>
         Ryan Soussan<sup>2,3</sup>,
         Kathryn Hamilton<sup>2</sup>,
         Ruben Garcia<sup>2,3</sup>,
         Maria Bualat<sup>2</sup>,
-        Trey Smith<sup>2</sup>,
+        Trey Smith<sup>2</sup>,<br>
         Jonathan Barlow<sup>2,3</sup>,
         Jose Benavides<sup>2</sup>
       </p>
