--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         Brian Coltin<sup>2,3</sup>,
         Andres Mora Vargas<sup>2,3</sup>,
         Marina Moreira<sup>2,3</sup>,<br>
-        Ryan Soussan<sup>2,3</sup>,
         Kathryn Hamilton<sup>2</sup>,
         Ruben Garcia<sup>2,3</sup>,
         Maria Bualat<sup>2</sup>,
@@ -43,16 +42,24 @@
       <div class="section">
         <h3 align="center">Abstract</h3>
         <hr />
-        <p></p>
+        <p>
+          We release new visual navigation datasets acquired in challenging interior environments of ISS, which have not been covered by existing datasets.
+          The datasets are captured by the Astrobee free-flying robots onboard the ISS since 2019 during intra-vehicular activities, including interior environmental surveys (e.g., systems inspection, monitoring, and sound level
+          measurements). We also benchmark six state-of-the-art visual odometry (VO) and SLAM algorithms on the proposed Astrobee datasets and you can see in our paper.
+        </p>
       </div>
       <div class="section">
-        <h3 align="center">Results</h3>
+        <h3 align="center">The Astrobee Dataset</h3>
         <hr />
-        <p></p>
+        <p>
+          Our datasets consist of various intra-vehicular activities of Astrobee free-flying robots currently operating on the ISS between May 13, 2019 and July 14, 2022.<br>
+          The datasets are collected inside the largest single ISS module, the Japanese experiment module (JEM) nicknamed Kibo, and contain ground-truth 6-DoF camera poses and detailed 3D CAD models of the environment.
+          <img src='/image/example_ISS_images.png'>
+        </p>
       </div>
       <p></p>
       <div class="section">
-        <h3>Query-based Scene Decomposition</h3>
+        <h3>Download</h3>
         <hr />
         <p></p>
       </div>
