--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <p>
           Our datasets consist of various intra-vehicular activities of Astrobee free-flying robots currently operating on the ISS between May 13, 2019 and July 14, 2022.<br>
           The datasets are collected inside the largest single ISS module, the Japanese experiment module (JEM) nicknamed Kibo, and contain ground-truth 6-DoF camera poses and detailed 3D CAD models of the environment.
-          <img src='/image/example_ISS_images.png'>
+          <img src='/image/example_ISS_images.png' width="300" style="margin-top:-10px;">
         </p>
       </div>
       <p></p>
