--- a/index.html
+++ b/index.html
@@ -59,12 +59,198 @@
       </div>
       <p></p>
       <div class="section">
-        <h3>Download</h3>
+        <h3 align="center">Download</h3>
         <hr />
-        <p></p>
+        <style>
+          .multi {
+                column-count : 2;
+                column-gap : 20px  }
+        </style>
+        <p>
+          ### Test and Debugging
+          <table style="width: 45%; float: left;">
+              <colgroup>
+                  <col style="width: 35%">
+                  <col style="width: 5%">
+                  <col style="width: 5%">
+                  <col style="width: 7%">
+              </colgroup>
+              <thead>
+              <tr>
+                  <th style="text-align:center">sequence</th>
+                  <th style="text-align:center">duration(s)</th>
+                  <th style="text-align:center">Download</th>
+                  <th style="text-align:center">Original bag file</th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr>
+                  <td>tb_roll</td>
+                  <td style="text-align:center">63</td>
+                  <td style="text-align:center">      </td>
+                  <td style="text-align:center">      </td>
+              </tr>
+              <tr>
+                  <td>tb_pitch</td>
+                  <td style="text-align:center">75</td>
+                  <td style="text-align:center">      </td>
+                  <td style="text-align:center">      </td>
+              </tr>
+              <tr>
+                  <td>tb_yaw</td>
+                  <td style="text-align:center">50</td>
+                  <td style="text-align:center">      </td>
+                  <td style="text-align:center">      </td>
+              </tr>
+              <tr>
+                  <td>tb_zxy</td>
+                  <td style="text-align:center">50</td>
+                  <td style="text-align:center">      </td>
+                  <td style="text-align:center">      </td>
+              </tr>
+              </tbody>
+          </table>
+
+          ### Free Flight
+          <table style="width: 45%; float: right;">
+              <colgroup>
+                  <col style="width: 35%">
+                  <col style="width: 5%">
+                  <col style="width: 5%">
+                  <col style="width: 7%">
+              </colgroup>
+              <thead>
+              <tr>
+                  <th style="text-align:center">sequence</th>
+                  <th style="text-align:center">duration(s)</th>
+                  <th style="text-align:center">Download</th>
+                  <th style="text-align:center">Original bag file</th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr>
+                  <td>ff_return_journey_forward</td>
+                  <td style="text-align:center">402</td>
+                  <td style="text-align:center">      </td>
+                  <td style="text-align:center">      </td>
+              </tr>
+              <tr>
+                  <td>ff_return_journey_up </td>
+                  <td style="text-align:center">413</td>
+                  <td style="text-align:center">      </td>
+                  <td style="text-align:center">      </td>
+              </tr>
+              <tr>
+                  <td>ff_return_journey_left</td>
+                  <td style="text-align:center">303</td>
+                  <td style="text-align:center">      </td>
+                  <td style="text-align:center">      </td>
+              </tr>
+              <tr>
+                  <td>ff_return_journey_right</td>
+                  <td style="text-align:center">328</td>
+                  <td style="text-align:center">      </td>
+                  <td style="text-align:center">      </td>
+              </tr>
+              <tr>
+                  <td>ff_return_journey_rot</td>
+                  <td style="text-align:center">108</td>
+                  <td style="text-align:center">      </td>
+                  <td style="text-align:center">      </td>
+              </tr>
+              <tr>
+                  <td>ff_JEM2USL_dark</td>
+                  <td style="text-align:center">32</td>
+                  <td style="text-align:center">      </td>
+                  <td style="text-align:center">      </td>
+              </tr>
+              <tr>
+                  <td>ff_JEM2USL_bright</td>
+                  <td style="text-align:center">92</td>
+                  <td style="text-align:center">      </td>
+                  <td style="text-align:center">      </td>
+              </tr>
+              <tr>
+                  <td>ff_nod2_dark</td>
+                  <td style="text-align:center">296</td>
+                  <td style="text-align:center">      </td>
+                  <td style="text-align:center">      </td>
+              </tr>
+              <tr>
+                  <td>ff_nod2_light</td>
+                  <td style="text-align:center">265</td>
+                  <td style="text-align:center">      </td>
+                  <td style="text-align:center">      </td>
+              </tr>
+              </tbody>
+          </table>
+
+          ### Intra-Vehicular Activity
+          <table style="width: 45%; float: left;">
+              <colgroup>
+                  <col style="width: 35%">
+                  <col style="width: 5%">
+                  <col style="width: 5%">
+                  <col style="width: 7%">
+              </colgroup>
+              <thead>
+              <tr>
+                  <th style="text-align:center">sequence</th>
+                  <th style="text-align:center">duration(s)</th>
+                  <th style="text-align:center">Download</th>
+                  <th style="text-align:center">Original bag file</th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr>
+                  <td>iva_kibo_trans</td>
+                  <td style="text-align:center">229</td>
+                  <td style="text-align:center">      </td>
+                  <td style="text-align:center">      </td>
+              </tr>
+              <tr>
+                  <td>iva_kibo_rot</td>
+                  <td style="text-align:center">196</td>
+                  <td style="text-align:center">      </td>
+                  <td style="text-align:center">      </td>
+              </tr>
+              <tr>
+                  <td>iva_hatch_inspection1</td>
+                  <td style="text-align:center">403</td>
+                  <td style="text-align:center">      </td>
+                  <td style="text-align:center">      </td>
+              </tr>
+              <tr>
+                  <td>iva_hatch_inspection2</td>
+                  <td style="text-align:center">521</td>
+                  <td style="text-align:center">      </td>
+                  <td style="text-align:center">      </td>
+              </tr>
+              <tr>
+                  <td>iva_dynamic_context1</td>
+                  <td style="text-align:center">236</td>
+                  <td style="text-align:center">      </td>
+                  <td style="text-align:center">      </td>
+              </tr>
+              <tr>
+                  <td>iva_dynamic_context2</td>
+                  <td style="text-align:center">192</td>
+                  <td style="text-align:center">      </td>
+                  <td style="text-align:center">      </td>
+              </tr>
+              <tr>
+                  <td>iva_ARtag</td>
+                  <td style="text-align:center">62</td>
+                  <td style="text-align:center">      </td>
+                  <td style="text-align:center">      </td>
+              </tr>
+              </tbody>
+          </table>
+
+        </p>
       </div>
       <div class="section">
-        <h3>Other Editings</h3>
+        <h3 align="center">Other Editings</h3>
         <hr />
         <p></p>
       </div>
