--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </style>
         <p>
           ### Test and Debugging
-          <table style="width: 45%; float: left;">
+          <table style="width: 50%; float: left;">
               <colgroup>
                   <col style="width: 35%">
                   <col style="width: 5%">
@@ -112,7 +112,7 @@
           </table>
 
           ### Free Flight
-          <table style="width: 45%; float: right;">
+          <table style="width: 50%; float: right;">
               <colgroup>
                   <col style="width: 35%">
                   <col style="width: 5%">
@@ -185,8 +185,8 @@
               </tbody>
           </table>
 
-          ### Intra-Vehicular Activity
-          <table style="width: 45%; float: left;">
+          Intra-Vehicular Activity
+          <table style="width: 50%; float: left;">
               <colgroup>
                   <col style="width: 35%">
                   <col style="width: 5%">
@@ -246,8 +246,8 @@
               </tr>
               </tbody>
           </table>
+        </p> <br>
 
-        </p>
       </div>
       <div class="section">
         <h3 align="center">Other Editings</h3>
