--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
                   <td style="text-align:center">      </td>
               </tr>
               </tbody>
-          </table>
+          </table> <br>
 
-          Intra-Vehicular Activity
+          ### Intra-Vehicular Activity
           <table style="width: 50%; float: left;">
               <colgroup>
                   <col style="width: 35%">
@@ -246,11 +246,11 @@
               </tr>
               </tbody>
           </table>
-        </p> <br>
+        </p> <br><br><br><br>
 
       </div>
       <div class="section">
-        <h3 align="center">Other Editings</h3>
+        <h3 align="center">Dataset Format</h3>
         <hr />
         <p></p>
       </div>
