--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
               </tr>
               </tbody>
           </table>
+          <br />
 
           ### Free Flight
           <table style="width: 50%; float: right;">
@@ -183,7 +184,10 @@
                   <td style="text-align:center">      </td>
               </tr>
               </tbody>
-          </table> <br>
+          </table>
+          <br />
+          <br />
+          <br />
 
           ### Intra-Vehicular Activity
           <table style="width: 50%; float: left;">
@@ -246,9 +250,9 @@
               </tr>
               </tbody>
           </table>
-        </p> <br><br><br><br>
-
+        </p>
       </div>
+
       <div class="section">
         <h3 align="center">Dataset Format</h3>
         <hr />
