add all text, Must change the layout

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             <br />
             ## Astrobee platform<br><br>
             The Astrobee free-flying IVA robots used for dataset collection. This is the positions of the sensors and the rigid body transformations that link them.<br>
-            <img src="/image/astrobee_platform.png" width="480" height="240">
+            <img src="/image/astrobee_platform.png" width="400" height="200">
             * NavCam provides monocular image sequences at 15 Hz.<br>
             * IMU are logged at 250Hz and expressed in IMU body cam.>
         </p>
@@ -294,12 +294,12 @@
       <br />
       <div class="section">
         <h3 align="center">BibTex</h3>
+        <hr />
         <div class="bibtexsection">
           @InProceedings{ ????,
 				title     = {Astrobee Datasets for Intra-Vehicular Activity Robots on the ISS},
-                author    = {Suyoung Kang, Daekyeong Lee, Ryan Soussan, Pyojin Kim, Brian Coltin,
-                            Andres Mora Vargas, Marina Moreira, Kathryn Hamilton, Ruben Garcia, Maria Bualat,
-                            Trey Smith, Jonathan Barlow, Jose Benavides},
+                author    = {Suyoung Kang, Daekyeong Lee, Ryan Soussan, Pyojin Kim, Brian Coltin, Andres Mora Vargas, Marina Moreira,
+                            Kathryn Hamilton, Ruben Garcia, Maria Bualat, Trey Smith, Jonathan Barlow, Jose Benavides},
 				booktitle = {?????},
 				year      = {2023}
 			}
