--- a/index.html
+++ b/index.html
@@ -258,36 +258,41 @@
             ## Distorted and Undistorted Images <br>
             We provide both original raw distorted images(with FOV lens distortion) and the undistorted images using existing dataset parsing tools. <br>
             <br>
-            * The distorted images are stored in "gray_raw" folder as 1280x960 8-bit gray images in PNG format. <br>
-            * The undistorted images are stored in "gray" folder as 1270x874 8-bit gray images in PNG format.<br>
-            * The name of the image file is **[timestamp.png]**.<br>
-            * The list of all images and their timestamp are also stored in "gray.txt" text file in **[timestamp filename]** format.<br>
-            * Timestamp are in integer nanoseconds UNIX.<br><br><br>
-
+            <ui>
+            <li>The distorted images are stored in "gray_raw" folder as 1280x960 8-bit gray images in PNG format. </li>
+            <li>The undistorted images are stored in "gray" folder as 1270x874 8-bit gray images in PNG format.</li>
+            <li>The name of the image file is **[timestamp.png]**.</li>
+            <li>The list of all images and their timestamp are also stored in "gray.txt" text file in **[timestamp filename]** format.</li>
+            <li>Timestamp are in integer nanoseconds UNIX.</li>
+            </ul>
 
             ## Ground-truth trajectories and IMU <br><br>
             We provide the Ground-truth trajectories in text file containing 6-DoF camera poses for all images. We also provide the angular rates and acceleration measurements from IMU.<br><br>
-
-            * The ground-truth trajectories are stored in "groundtruth.txt".<br>
-            * Each line in the groundtruth text file contains a single pose of nav_cam as **[timestamp tx ty tz qx qy qz qw]** format.<br><br>
-
-
-            * The IMU are stored in "imu.txt".<br>
-            * Each line in the imu text file contains timestamped gyro and accelerometer measurements as **[timestamp wx wy wz ax ay az]** format. <br><br>
-
+            <ul>
+            <li>The ground-truth trajectories are stored in "groundtruth.txt".</li>
+            <li>Each line in the groundtruth text file contains a single pose of nav_cam as **[timestamp tx ty tz qx qy qz qw]** format.</li><br>
+            </ul>
+            <ul>
+            <li>The IMU are stored in "imu.txt".</li>
+            <li>Each line in the imu text file contains timestamped gyro and accelerometer measurements as **[timestamp wx wy wz ax ay az]** format.</li><br>
+            </ul>
             Note that all measurements above are expressed in SI units.<br>
 
             ## Intrinsic Camera Calibration Parmeters<br><br>
 
             We provide the intrinsic camera parameters for both (raw / undistorted) images in text file.<br>
-            * The intrinsic camera parameters for the distorted images are stored in "distorted calib.txt" with FOV lens distortion coefficient as **[fx fy cx cy w]** format.<br>
-            * The intrinsic camera parameters for the undistorted images are stored in "undistorted calib.txt" as **[fx fy cx cy]** format.
+            <ul>
+            <li>The intrinsic camera parameters for the distorted images are stored in "distorted calib.txt" with FOV lens distortion coefficient as **[fx fy cx cy w]** format.</li>
+            <li>The intrinsic camera parameters for the undistorted images are stored in "undistorted calib.txt" as **[fx fy cx cy]** format.</li>
+            </ul>
             <br />
             ## Astrobee platform<br><br>
             The Astrobee free-flying IVA robots used for dataset collection. This is the positions of the sensors and the rigid body transformations that link them.<br>
             <img src="/image/astrobee_platform.png" width="400" height="200">
-            * NavCam provides monocular image sequences at 15 Hz.<br>
-            * IMU are logged at 250Hz and expressed in IMU body cam.>
+            <ul>
+            <li>NavCam provides monocular image sequences at 15 Hz.</li>
+            <li>IMU are logged at 250Hz and expressed in IMU body cam.</li>
+            </ul>
         </p>
       </div>
       <br />
@@ -314,9 +319,11 @@
         <hr />
         <p>
           You can send feedback and questions to: <br>
-            * ### Pyojin Kim : pjinkim1215@gmail.com <br>
-            * ### Suyoung Kang : suyoungkang1222@gmail.com <br>
-            * ### Daekyeong Lee : swbubl@gmail.com <br>
+            <ul>
+            <li> Pyojin Kim : pjinkim1215@gmail.com </li>
+            <li> Suyoung Kang : suyoungkang1222@gmail.com </li>
+            <li> Daekyeong Lee : swbubl@gmail.com </li>
+            </ul>
         </p>
       </div>
         <footer>
