--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
         <footer>
         <hr />
         <p>
-           Sookmyung Women's University, MPIL(Machine Perception and Intelligence Lab) <br>
+           <font-size="2">Sookmyung Women's University, MPIL(Machine Perception and Intelligence Lab)</font> <br>
         </p>
         </footer>
 
