--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <p>
             We provide each Astrobee sequence in the TUM RGB-D format and the original bag file. Each sequence is compressed as a single **ZIP** archive which contains a **description file**, **images**,
             **calibration parameters**, **ground-truth**, and **IMU measurements**. <br> </p>
-          <h4>Test and Debugging</h4>
+          <h3><strong>Test and Debugging</strong></h3>
           <p>
           <table style="width: 50%; float: left;">
               <colgroup>
@@ -108,9 +108,8 @@
               </tr>
               </tbody>
           </table>
-          <br />
           </p>
-          <h4>> Free Flight </h4>
+          <h3><strong>Free Flight</strong></h3>
           <p>
           <table style="width: 50%; float: right;">
               <colgroup>
@@ -184,12 +183,9 @@
               </tr>
               </tbody>
           </table>
-          </p>
-          <br />
-          <br />
-          <br />
+          </p><br><br>
 
-          <h4>Intra-Vehicular Activity</h4>
+          <h3><strong>Intra-Vehicular Activity</strong></h3>
           <p>
           <table style="width: 50%; float: left;">
               <colgroup>
@@ -251,6 +247,7 @@
               </tr>
               </tbody>
           </table>
+          <hr />
         </p>
       </div>
 
@@ -259,7 +256,7 @@
         <hr />
         <p>
             We provide each Astrobee sequence in the TUM RGB-D format in the following format: <br> </p>
-          <h4> Distorted and Undistorted Images</h4>
+          <h3><strong>Distorted and Undistorted Images</strong></h3>
           <p>
               We provide both original raw distorted images(with FOV lens distortion) and the undistorted images using existing dataset parsing tools. <br>
             <br>
@@ -269,9 +266,9 @@
             <li>The name of the image file is **[timestamp.png]**.</li>
             <li>The list of all images and their timestamp are also stored in "gray.txt" text file in **[timestamp filename]** format.</li>
             <li>Timestamp are in integer nanoseconds UNIX.</li>
-            </ul> </p>
+            </ul><br>  </p>
 
-            <h4> Ground-truth trajectories and IMU</h4>
+          <h3><strong> Ground-truth trajectories and IMU</strong></h3>
             <p>We provide the Ground-truth trajectories in text file containing 6-DoF camera poses for all images. We also provide the angular rates and acceleration measurements from IMU.<br><br>
             <ul>
             <li>The ground-truth trajectories are stored in "groundtruth.txt".</li>
@@ -281,9 +278,9 @@
             <li>The IMU are stored in "imu.txt".</li>
             <li>Each line in the imu text file contains timestamped gyro and accelerometer measurements as **[timestamp wx wy wz ax ay az]** format.</li><br>
             </ul>
-            Note that all measurements above are expressed in SI units.<br> </p>
+            Note that all measurements above are expressed in SI units.<br> <br> </p>
 
-          <h4> Intrinsic Camera Calibration Parmeters</h4>
+          <h3><strong> Intrinsic Camera Calibration Parmeters</strong></h3>
             <p>
             We provide the intrinsic camera parameters for both (raw / undistorted) images in text file.<br>
             <ul>
@@ -291,7 +288,7 @@
             <li>The intrinsic camera parameters for the undistorted images are stored in "undistorted calib.txt" as **[fx fy cx cy]** format.</li>
             </ul> </p>
             <br />
-          <h4> Astrobee platform</h4>
+          <h3><strong> Astrobee platform</strong></h3>
             <p>The Astrobee free-flying IVA robots used for dataset collection. This is the positions of the sensors and the rigid body transformations that link them.<br>
             <img src="/image/astrobee_platform.png" width="400" height="200">
             <ul>
