--- a/index.html
+++ b/index.html
@@ -288,6 +288,7 @@
             <li>The intrinsic camera parameters for the undistorted images are stored in "undistorted calib.txt" as **[fx fy cx cy]** format.</li>
             </ul> </p>
             <br />
+            <hr >
           <h4><strong> Astrobee platform</strong></h4>
             <p>The Astrobee free-flying IVA robots used for dataset collection. This is the positions of the sensors and the rigid body transformations that link them.<br>
             <img src="/image/astrobee_platform.png" width="400" height="200">
@@ -305,8 +306,7 @@
         <div class="bibtexsection">
           @InProceedings{ ????,
 				title     = {Astrobee Datasets for Intra-Vehicular Activity Robots on the ISS},
-                author    = {Suyoung Kang, Daekyeong Lee, Ryan Soussan, Pyojin Kim, Brian Coltin, Andres Mora Vargas, Marina Moreira,
-                            Kathryn Hamilton, Ruben Garcia, Maria Bualat, Trey Smith, Jonathan Barlow, Jose Benavides},
+                author    = {Suyoung Kang, Daekyeong Lee, Ryan Soussan, Pyojin Kim, Brian Coltin, Andres Mora Vargas, Marina Moreira, Kathryn Hamilton, Ruben Garcia, Maria Bualat, Trey Smith, Jonathan Barlow, Jose Benavides},
 				booktitle = {?????},
 				year      = {2023}
 			}
