--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             <li>The IMU are stored in "imu.txt".</li>
             <li>Each line in the imu text file contains timestamped gyro and accelerometer measurements as <strong>[timestamp wx wy wz ax ay az]</strong> format.</li><br>
             </ul>
-            Note that all measurements above are expressed in SI units.</p>
+            Note that all measurements above are expressed in SI units.<br></p>
 
 
           <h4><strong> Intrinsic Camera Calibration Parmeters</strong></h4>
